# lg-tie-lib

./: .buildinfo  .gitignore  AUTHORS.md  LICENSE.md  MANIFEST.in  README.md  TIE_demo.py  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
_modules/: index.html
_modules/TIE/: TIE_core.html  TIE_general.html  TIE_load.html  TIE_visual.html
config/: .condarc  set_conda_config.cmd  setup_conda_environment.cmd
data/BedrockColors/: Biaufond.txt
data/geocover/GC-V-V2-143/Data/SHP/de/: Bedrock_PLG.shp  Bedrock_PLG.shx  Planar_Structures_PT.dbf  Planar_Structures_PT.shx  Tectonic_Boundaries_L.shp  Tectonic_Boundaries_L.shx
data/geocover/GC-V-V2-143/Metadata/: 143_Boltigen.dbf  143_Boltigen.shx
doc/: Makefile  api.rst  conf.py  index.rst  usage.rst
python/: TIE-MASTER.py  TIE-module.xlsx
python/BedrockColors/: Boltigen.txt  Chasseral.txt  Mendrisio.txt  Muotatal.txt  Samnaun.txt
python/TIE/: TIE_classes.py  TIE_core.py  TIE_general.py  TIE_load.py  TIE_visual.py  __init__.py
recipe/: meta.yaml
src/TIE/: TIE_classes.py  TIE_core.py  TIE_load.py  __init__.py
src/untie/: TIE_core.py  TIE_general.py  TIE_load.py  TIE_visual.py
src/untie/data/BedrockColors/: Bellelay.txt  Saignelegier.txt  StUrsanne.txt
src/untie/data/geocover/GC-V-V2-143/Data/SHP/de/: Bedrock_PLG.dbf  Planar_Structures_PT.shp  Planar_Structures_PT.shz  Tectonic_Boundaries_L.shz
src/untie/data/geocover/GC-V-V2-143/Metadata/: 143_Boltigen.shp
src/untie/scripts/: untie_demo.py
