[metadata]
name = my_package
version = attr: my_package.VERSION
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*






[metadata]
name = TIE
version = attr: TIE.__version__
author = Anna Rauch
author_email = contact@infogrip.ch
maintainer = Marc Monnerat
maintainer_email = marc.monnerat@swisstopo.ch
url = https://github.com/swisstopo/lg-tie-lib
description = Trace Information Extraction (TIE) library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geology, trace information extraction, TIE, map
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    geocube
    geopandas
    matplotlib
    mayavi
    numpy
    rasterio
    scipy
    shapely>=2.0.0
    scikit-image



[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1

[options.packages.find]
exclude =
    data*
    docs*
