[metadata]
name = TIE
version = attr: TIE.__version__
author = Anna Rauch
author_email = contact@cartogrip.ch
description = My package description
long_description = file: README.md CHANGELOG.md, LICENSE.md
keywords = geology, map, trace intersection extraction, TIE
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=src
python_requires = >=38
install_requires =
    geocube
    geopandas
    matplotlib
    mayavi
    numpy
    rasterio
    scipy
    shapely>=2.0.0
    scikit-image

[options.package_data]
* = *.txt, *.rst


[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
dev = ruff

[options.packages.find]
where=src
exclude =
    data*
    docs*










[metadata]
name = TIE
version = attr: TIE.__version__
author = Anna Rauch
author_email = contact@infogrip.ch
maintainer = Marc Monnerat
maintainer_email = marc.monnerat@swisstopo.ch
url = https://github.com/swisstopo/lg-tie-lib
description = Trace Information Extraction (TIE) library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geology, trace information extraction, TIE, map
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    geocube
    geopandas
    matplotlib
    mayavi
    numpy
    rasterio
    scipy
    shapely>=2.0.0
    scikit-image



[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1

[options.packages.find]
exclude =
    data*
    docs*
