[metadata]
name = untie
version =  file: VERSION
author = Anna Rauch
author_email = contact@infogrip.ch
maintainer = Marc Monnerat
maintainer_email = marc.monnerat@swisstopo.ch
url = https://github.com/swisstopo/lg-tie-lib
description = Trace Information Extraction (TIE) library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geology, trace information extraction, TIE, map
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: GIS

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    geocube
    geopandas
    matplotlib
    mayavi
    numpy
    rasterio
    scipy
    shapely>=2.0.0
    scikit-image

[options.extras_require]
dev =
    black
    flake8
    ruff
    pip-tools
    wheel
    twine
doc =
    sphinx
    sphinx-rtd-theme
    sphinx-autobuild

[options.packages.find]
where=src
exclude =
    data*
    doc*


[options.package_data]
* = *.txt, *.rst



















